--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="Neurotoxin.Godspeed.Shell.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
              xmlns:shell="clr-namespace:Microsoft.Windows.Shell;assembly=Microsoft.Windows.Shell"
              xmlns:co="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
@@ -17,6 +18,9 @@
                     <SolidColorBrush x:Key="NormalBrush" Color="#FF808080" />
                     <SolidColorBrush x:Key="NormalBorderBrush" Color="#FF9B9999" />
                     <SolidColorBrush x:Key="DefaultedBorderBrush" Color="#FF9BB1C5" />
+
+                    <SolidColorBrush x:Key="SelectedBackgroundBrush" Color="#DDD" />
+                    <SolidColorBrush x:Key="GlyphBrush" Color="#444" />
 
                     <co:EnumConverter x:Key="EnumConverter"/>
                     <co:BoolToVisibilityConverter x:Key="BoolToVis"/>
@@ -128,6 +132,225 @@
                     <Style TargetType="{x:Type TextBlock}" x:Key="Link">
                         <Setter Property="Foreground" Value="Blue"/>
                     </Style>
+
+                    <Style TargetType="Separator" x:Key="SeparatorStyle">
+                        <Setter Property="Height" Value="1"/>
+                        <Setter Property="Margin" Value="0,4,0,4"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="Separator">
+                                    <Border BorderBrush="{StaticResource NormalBorderBrush}" BorderThickness="1"/>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+
+                    <!-- TopLevelHeader -->
+                    <ControlTemplate TargetType="MenuItem" x:Key="TopLevelHeaderTemplateEx">
+                        <Border Name="Border" >
+                            <Grid>
+                                <ContentPresenter Margin="6,3,6,3" ContentSource="Header" RecognizesAccessKey="True" />
+                                <Popup Name="Popup" Placement="Bottom" IsOpen="{TemplateBinding IsSubmenuOpen}" AllowsTransparency="True" Focusable="False" PopupAnimation="Fade">
+                                    <Border Name="SubmenuBorder" SnapsToDevicePixels="True" Background="{StaticResource WindowBackgroundBrush}" BorderBrush="{StaticResource NormalBorderBrush}" BorderThickness="1">
+                                        <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Cycle" />
+                                    </Border>
+                                </Popup>
+                            </Grid>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsSuspendingPopupAnimation" Value="true">
+                                <Setter TargetName="Popup" Property="PopupAnimation" Value="None"/>
+                            </Trigger>
+                            <Trigger Property="IsHighlighted" Value="true">
+                                <Setter TargetName="Border" Property="Background" Value="{StaticResource NormalBrush}"/>
+                                <Setter TargetName="Border" Property="BorderBrush" Value="Transparent"/>
+                            </Trigger>
+                            <Trigger SourceName="Popup" Property="Popup.AllowsTransparency" Value="True">
+                                <Setter TargetName="SubmenuBorder" Property="CornerRadius" Value="0"/>
+                                <Setter TargetName="SubmenuBorder" Property="Padding" Value="0"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+
+                    <LinearGradientBrush x:Key="Background1" StartPoint="0,0" EndPoint="0,1">
+                        <LinearGradientBrush.GradientStops>
+                            <GradientStop Color="#F3F3F3" Offset="0" />
+                            <GradientStop Color="#EBEBEB" Offset="0.5" />
+                            <GradientStop Color="#DDDDDD" Offset="0.5" />
+                            <GradientStop Color="#CDCDCD" Offset="1" />
+                        </LinearGradientBrush.GradientStops>
+                    </LinearGradientBrush>
+                    <SolidColorBrush x:Key="Background2" Color="#FF707070" />
+                    <LinearGradientBrush x:Key="Background3" StartPoint="0,0" EndPoint="0,1">
+                        <LinearGradientBrush.GradientStops>
+                            <GradientStop Color="#C4C4C4" Offset="0" />
+                            <GradientStop Color="#C4C4C4" Offset="0.75" />
+                            <GradientStop Color="#939393" Offset="1" />
+                        </LinearGradientBrush.GradientStops>
+                    </LinearGradientBrush>
+
+
+                    <ControlTemplate TargetType="MenuItem" x:Key="TopLevelHeaderTemplate">
+                        <Grid SnapsToDevicePixels="true">
+                            <Rectangle Name="OuterBorder" RadiusX="2" RadiusY="2" />
+                            <Rectangle Name="Bg" Margin="1" Fill="{TemplateBinding Background}" Stroke="{TemplateBinding BorderBrush}" StrokeThickness="1" RadiusX="1" RadiusY="1" />
+                            <Rectangle Name="InnerBorder" Margin="2" />
+                            <DockPanel>
+                                <ContentPresenter Name="Icon" Margin="4,0,6,0" VerticalAlignment="Center" ContentSource="Icon" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                                <!--<Path Name="GlyphPanel" Margin="7,0,0,0" Visibility="Collapsed" VerticalAlignment="Center" Fill="{TemplateBinding Foreground}" FlowDirection="LeftToRight" Data="{StaticResource [0] Ñ}" />-->
+                                <ContentPresenter ContentSource="Header" Margin="{TemplateBinding Padding}" RecognizesAccessKey="true" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                            </DockPanel>
+                            <Popup Name="PART_Popup" HorizontalOffset="1" VerticalOffset="-1" AllowsTransparency="true" Placement="Bottom" Focusable="false" PopupAnimation="{DynamicResource {x:Static SystemParameters.MenuPopupAnimation}}" IsOpen="{Binding Path=IsSubmenuOpen, RelativeSource={RelativeSource TemplatedParent}}">
+                                <theme:SystemDropShadowChrome Name="Shdw" Color="Transparent" FlowDirection="LeftToRight">
+                                    <Border Name="SubMenuBorder" Background="White" BorderBrush="{StaticResource NormalBorderBrush}" BorderThickness="1">
+                                        <!--<ScrollViewer Name="SubMenuScrollViewer" Margin="1,0">-->
+                                            <Grid RenderOptions.ClearTypeHint="Enabled">
+                                                <ItemsPresenter Name="ItemsPresenter" Margin="2" KeyboardNavigation.TabNavigation="Cycle" KeyboardNavigation.DirectionalNavigation="Cycle" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Grid.IsSharedSizeScope="true" />
+                                            </Grid>
+                                        <!--</ScrollViewer>-->
+                                    </Border>
+                                </theme:SystemDropShadowChrome>
+                            </Popup>
+                        </Grid>
+                        <!--<ControlTemplate x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type MenuItem}, ResourceId=TopLevelHeaderTemplateKey}" TargetType="{x:Type MenuItem}">-->
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsSuspendingPopupAnimation" Value="true">
+                                <Setter TargetName="PART_Popup" Property="PopupAnimation" Value="None" />
+                            </Trigger>
+                            <Trigger Value="{x:Null}" Property="Icon">
+                                <Setter TargetName="Icon" Property="Visibility" Value="Collapsed" />
+                            </Trigger>
+                            <Trigger Property="IsChecked" Value="true">
+                                <!--<Setter TargetName="GlyphPanel" Property="Visibility" Value="Visible" />-->
+                                <Setter TargetName="Icon" Property="Visibility" Value="Collapsed" />
+                            </Trigger>
+                            <Trigger SourceName="PART_Popup" Property="HasDropShadow" Value="true">
+                                <Setter TargetName="Shdw" Property="Margin" Value="0,0,5,5" />
+                                <Setter TargetName="Shdw" Property="Color" Value="#71000000" />
+                            </Trigger>
+                            <Trigger Property="IsHighlighted" Value="true">
+                                <Setter TargetName="Bg" Property="Stroke" Value="#90717070" />
+                                <Setter TargetName="OuterBorder" Property="Stroke" Value="#50FFFFFF" />
+                                <Setter TargetName="InnerBorder" Property="Stroke" Value="#50FFFFFF" />
+                            </Trigger>
+                            <Trigger Property="IsKeyboardFocused" Value="true">
+                                <Setter TargetName="Bg" Property="Stroke" Value="#E0717070" />
+                                <Setter TargetName="Bg" Value="{StaticResource Background3}" Property="Fill" />
+                                <Setter TargetName="InnerBorder" Property="Stroke" Value="#50747272" />
+                            </Trigger>
+                            <Trigger Property="IsSubmenuOpen" Value="true">
+                                <Setter TargetName="Bg" Property="Stroke" Value="#E0717070" />
+                                <Setter TargetName="Bg" Value="{StaticResource Background3}" Property="Fill" />
+                                <Setter TargetName="InnerBorder" Property="Stroke" Value="#50747272" />
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Foreground" Value="#FF9A9A9A" />
+                                <!--<Setter TargetName="GlyphPanel" Property="Fill" Value="#848589" />-->
+                            </Trigger>
+                            <!--<Trigger SourceName="SubMenuScrollViewer" Property="CanContentScroll" Value="false">
+                                <Setter TargetName="OpaqueRect" Value="{Binding ElementName=SubMenuScrollViewer, Path=VerticalOffset}" Property="Top" />
+                                <Setter TargetName="OpaqueRect" Value="{Binding ElementName=SubMenuScrollViewer, Path=HorizontalOffset}" Property="Left" />
+                            </Trigger>-->
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+
+                    <!-- TopLevelItem -->
+                    <ControlTemplate TargetType="MenuItem" x:Key="TopLevelItemTemplate">
+                        <Border Name="Border">
+                            <Grid>
+                                <ContentPresenter Margin="6,3,6,3" ContentSource="Header" RecognizesAccessKey="True" />
+                            </Grid>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsHighlighted" Value="true">
+                                <Setter TargetName="Border" Property="Background" Value="{StaticResource NormalBrush}"/>
+                                <Setter TargetName="Border" Property="BorderBrush" Value="Transparent"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+
+                    <!-- SubmenuItem -->
+                    <ControlTemplate TargetType="MenuItem" x:Key="SubmenuItemTemplate">
+                        <Border Name="Border">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" SharedSizeGroup="Icon"/>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="Auto" SharedSizeGroup="Shortcut"/>
+                                    <ColumnDefinition Width="13"/>
+                                </Grid.ColumnDefinitions>
+                                <ContentPresenter Name="Icon" Margin="6,0,6,0" VerticalAlignment="Center" ContentSource="Icon"/>
+                                <Border Name="Check" Width="13" Height="13" Visibility="Collapsed" Margin="6,0,6,0" Background="{StaticResource NormalBrush}" BorderThickness="1" BorderBrush="{StaticResource NormalBorderBrush}">
+                                    <Path Name="CheckMark" Width="7" Height="7" Visibility="Hidden" SnapsToDevicePixels="False" Stroke="{StaticResource GlyphBrush}" StrokeThickness="2" Data="M 0 0 L 7 7 M 0 7 L 7 0" />
+                                </Border>
+                                <ContentPresenter Name="HeaderHost" Grid.Column="1" ContentSource="Header" RecognizesAccessKey="True"/>
+                                <TextBlock x:Name="InputGestureText" Grid.Column="2" Text="{TemplateBinding InputGestureText}" Margin="5,2,0,2" DockPanel.Dock="Right" />
+                            </Grid>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="Icon" Value="{x:Null}">
+                                <Setter TargetName="Icon" Property="Visibility" Value="Hidden"/>
+                            </Trigger>
+                            <Trigger Property="IsChecked" Value="true">
+                                <Setter TargetName="CheckMark" Property="Visibility" Value="Visible"/>
+                            </Trigger>
+                            <Trigger Property="IsCheckable" Value="true">
+                                <Setter TargetName="Check" Property="Visibility" Value="Visible"/>
+                                <Setter TargetName="Icon" Property="Visibility" Value="Hidden"/>
+                            </Trigger>
+                            <Trigger Property="IsHighlighted" Value="true">
+                                <Setter TargetName="Border" Property="Background" Value="{StaticResource SelectedBackgroundBrush}"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+
+                    <!-- SubmenuHeader -->
+
+                    <ControlTemplate TargetType="MenuItem" x:Key="SubmenuHeaderTemplate">
+                        <Border Name="Border">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" SharedSizeGroup="Icon"/>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="Auto" SharedSizeGroup="Shortcut"/>
+                                    <ColumnDefinition Width="13"/>
+                                </Grid.ColumnDefinitions>
+                                <ContentPresenter Name="Icon" Margin="6,0,6,0" VerticalAlignment="Center" ContentSource="Icon"/>
+                                <ContentPresenter Name="HeaderHost" Grid.Column="1" ContentSource="Header" RecognizesAccessKey="True"/>
+                                <TextBlock x:Name="InputGestureText" Grid.Column="2" Text="{TemplateBinding InputGestureText}" Margin="5,2,2,2" DockPanel.Dock="Right"/>
+                                <Path Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Data="M 0 0 L 0 7 L 4 3.5 Z" Fill="{StaticResource GlyphBrush}" />
+                                <Popup Name="Popup" Placement="Right" HorizontalOffset="-4" IsOpen="{TemplateBinding IsSubmenuOpen}" AllowsTransparency="True" Focusable="False" PopupAnimation="Fade">
+                                    <Border Name="SubmenuBorder" SnapsToDevicePixels="True" Background="{StaticResource WindowBackgroundBrush}" BorderBrush="{StaticResource NormalBorderBrush}" BorderThickness="1">
+                                        <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Cycle" />
+                                    </Border>
+                                </Popup>
+                            </Grid>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="Icon" Value="{x:Null}">
+                                <Setter TargetName="Icon" Property="Visibility" Value="Collapsed"/>
+                            </Trigger>
+                            <Trigger Property="IsHighlighted" Value="true">
+                                <Setter TargetName="Border" Property="Background" Value="{StaticResource SelectedBackgroundBrush}"/>
+                            </Trigger>
+                            <Trigger SourceName="Popup" Property="Popup.AllowsTransparency" Value="True">
+                                <Setter TargetName="SubmenuBorder" Property="CornerRadius" Value="4"/>
+                                <Setter TargetName="SubmenuBorder" Property="Padding" Value="0,3,0,3"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
 
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
