--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileManagerWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileManagerWindow.xaml
@@ -1,18 +1,37 @@
 ﻿<primitives:BorderlessWindow x:Class="Neurotoxin.Godspeed.Shell.Views.FileManagerWindow"
-                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                           xmlns:inf="clr-namespace:Neurotoxin.Godspeed.Presentation.Infrastructure;assembly=Neurotoxin.Godspeed.Presentation"
-                           xmlns:views="clr-namespace:Neurotoxin.Godspeed.Shell.Views"
-                           xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-                           xmlns:commands="clr-namespace:Neurotoxin.Godspeed.Shell.Commands"
-                           xmlns:ts="clr-namespace:Neurotoxin.Godspeed.Shell.Views.TemplateSelectors"
-                           xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
-                           Width="950" Height="600">
+                             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                             xmlns:inf="clr-namespace:Neurotoxin.Godspeed.Presentation.Infrastructure;assembly=Neurotoxin.Godspeed.Presentation"
+                             xmlns:views="clr-namespace:Neurotoxin.Godspeed.Shell.Views"
+                             xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+                             xmlns:commands="clr-namespace:Neurotoxin.Godspeed.Shell.Commands"
+                             xmlns:ts="clr-namespace:Neurotoxin.Godspeed.Shell.Views.TemplateSelectors"
+                             xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
+                             xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
+                             xmlns:u2u="clr-namespace:Microsoft.Windows.Controls;assembly=U2UConsult.RichHtmlTextBlock"
+                             Width="950" Height="600">
     <primitives:BorderlessWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Themes/ExpressionLight.xaml"/>
                 <ResourceDictionary>
+                    <Style TargetType="MenuItem">
+                        <Setter Property="Margin" Value="0"/>
+                        <Style.Triggers>
+                            <Trigger Property="Role" Value="TopLevelHeader">
+                                <Setter Property="Template" Value="{StaticResource TopLevelHeaderTemplate}"/>
+                                <Setter Property="Grid.IsSharedSizeScope" Value="true"/>
+                            </Trigger>
+                            <Trigger Property="Role" Value="SubmenuHeader">
+                                <Setter Property="Template" Value="{StaticResource SubmenuHeaderTemplate}"/>
+                            </Trigger>                            
+                        </Style.Triggers>
+                    </Style>
+                    <Style TargetType="u2u:RichTextBox">
+                        <Setter Property="Background" Value="Transparent"/>
+                        <Setter Property="BorderBrush" Value="Transparent"/>
+                        <Setter Property="BorderThickness" Value="0"/>
+                    </Style>
                     <ts:PaneTemplateSelector x:Key="TemplateSelector">
                         <ts:PaneTemplateSelector.DefaultTemplate>
                             <DataTemplate>
@@ -42,6 +61,10 @@
 
     <Grid x:Name="LayoutRoot">
         <Grid Margin="3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
@@ -50,9 +73,6 @@
             
             <Menu>
                 <Menu.Resources>
-                    <Style TargetType="MenuItem">
-                        <Setter Property="Margin" Value="0"/>
-                    </Style>
                     <Style TargetType="MenuItem" x:Key="SubMenuItem">
                         <Style.Triggers>
                             <Trigger Property="Command" Value="{x:Null}">
@@ -78,7 +98,60 @@
                 </MenuItem>
             </Menu>
             
-            <AdornerDecorator Grid.Row="1">
+            <Menu Grid.Column="1">
+                <Menu.Resources>
+                    <Style TargetType="MenuItem" x:Key="MessageItem">
+                        <Setter Property="Margin" Value="0"/>
+                        <Setter Property="Width" Value="350"/>
+                        <Setter Property="FlowDirection" Value="LeftToRight" />
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type MenuItem}">
+                                    <ControlTemplate.Resources>
+                                        <u2u:HtmlFormatter x:Key="Formatter"/>
+                                    </ControlTemplate.Resources>
+                                    <Border Name="Border" Background="White">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="*"/>
+                                            </Grid.ColumnDefinitions>
+                                            <ContentPresenter Margin="6,3,8,0" VerticalAlignment="Top" ContentSource="Icon"/>
+                                            <u2u:RichTextBox Grid.Column="1" Text="{TemplateBinding Header}" TextFormatter="{StaticResource Formatter}" />
+                                        </Grid>
+                                        </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsHighlighted" Value="true">
+                                            <Setter TargetName="Border" Property="Background" Value="{StaticResource ControlBackgroundBrush}"/>
+                                            <Setter Property="Cursor" Value="Hand"/>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Menu.Resources>
+                <MenuItem Header="{Binding UnreadMessageCount}" FlowDirection="RightToLeft">
+                    <MenuItem.HeaderTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal" FlowDirection="LeftToRight">
+                                <TextBlock Text="Messages"/>
+                                <Border CornerRadius="8" Background="#dc0d17" Margin="3,1,0,0">
+                                    <TextBlock Text="9" Foreground="White" FontWeight="Bold" Margin="5,0,5,0" FontSize="10" />
+                                </Border>
+                            </StackPanel>
+                        </DataTemplate>
+                    </MenuItem.HeaderTemplate>
+                    <MenuItem Header="{Binding xxx}" 
+                              Style="{StaticResource MessageItem}">
+                        <MenuItem.Icon>
+                            <controls:GreyableImage Source="/Resources/info.png" Width="16" Height="16" SnapsToDevicePixels="True"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                </MenuItem>
+            </Menu>
+            
+            <AdornerDecorator Grid.Row="1" Grid.ColumnSpan="2">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -91,7 +164,7 @@
                 </Grid>
             </AdornerDecorator>
 
-            <Grid Grid.Column="0" Grid.Row="2" Margin="0,3,0,0">
+            <Grid Grid.Row="2" Grid.ColumnSpan="2" Margin="0,3,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
