--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
@@ -19,8 +19,27 @@
                     <SolidColorBrush x:Key="NormalBorderBrush" Color="#FF9B9999" />
                     <SolidColorBrush x:Key="DefaultedBorderBrush" Color="#FF9BB1C5" />
 
-                    <SolidColorBrush x:Key="SelectedBackgroundBrush" Color="#DDD" />
-                    <SolidColorBrush x:Key="GlyphBrush" Color="#444" />
+                    <!--<SolidColorBrush x:Key="MenuGlyphBrush" Color="#444444" />-->
+                    <SolidColorBrush x:Key="MenuGlyphBrush" Color="#FF9BB1C5" />
+                    <SolidColorBrush x:Key="MenuHighlight1" Color="#ECEFF5"/>
+                    <SolidColorBrush x:Key="MenuHighlight2" Color="#F4F6F9"/>
+
+                    <LinearGradientBrush x:Key="Background1" StartPoint="0,0" EndPoint="0,1">
+                        <LinearGradientBrush.GradientStops>
+                            <GradientStop Color="#F3F3F3" Offset="0" />
+                            <GradientStop Color="#EBEBEB" Offset="0.5" />
+                            <GradientStop Color="#DDDDDD" Offset="0.5" />
+                            <GradientStop Color="#CDCDCD" Offset="1" />
+                        </LinearGradientBrush.GradientStops>
+                    </LinearGradientBrush>
+                    <SolidColorBrush x:Key="Background2" Color="#FF707070" />
+                    <LinearGradientBrush x:Key="Background3" StartPoint="0,0" EndPoint="0,1">
+                        <LinearGradientBrush.GradientStops>
+                            <GradientStop Color="#C4C4C4" Offset="0" />
+                            <GradientStop Color="#C4C4C4" Offset="0.75" />
+                            <GradientStop Color="#939393" Offset="1" />
+                        </LinearGradientBrush.GradientStops>
+                    </LinearGradientBrush>
 
                     <co:EnumConverter x:Key="EnumConverter"/>
                     <co:BoolToVisibilityConverter x:Key="BoolToVis"/>
@@ -146,53 +165,6 @@
                     </Style>
 
                     <!-- TopLevelHeader -->
-                    <ControlTemplate TargetType="MenuItem" x:Key="TopLevelHeaderTemplateEx">
-                        <Border Name="Border" >
-                            <Grid>
-                                <ContentPresenter Margin="6,3,6,3" ContentSource="Header" RecognizesAccessKey="True" />
-                                <Popup Name="Popup" Placement="Bottom" IsOpen="{TemplateBinding IsSubmenuOpen}" AllowsTransparency="True" Focusable="False" PopupAnimation="Fade">
-                                    <Border Name="SubmenuBorder" SnapsToDevicePixels="True" Background="{StaticResource WindowBackgroundBrush}" BorderBrush="{StaticResource NormalBorderBrush}" BorderThickness="1">
-                                        <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Cycle" />
-                                    </Border>
-                                </Popup>
-                            </Grid>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsSuspendingPopupAnimation" Value="true">
-                                <Setter TargetName="Popup" Property="PopupAnimation" Value="None"/>
-                            </Trigger>
-                            <Trigger Property="IsHighlighted" Value="true">
-                                <Setter TargetName="Border" Property="Background" Value="{StaticResource NormalBrush}"/>
-                                <Setter TargetName="Border" Property="BorderBrush" Value="Transparent"/>
-                            </Trigger>
-                            <Trigger SourceName="Popup" Property="Popup.AllowsTransparency" Value="True">
-                                <Setter TargetName="SubmenuBorder" Property="CornerRadius" Value="0"/>
-                                <Setter TargetName="SubmenuBorder" Property="Padding" Value="0"/>
-                            </Trigger>
-                            <Trigger Property="IsEnabled" Value="False">
-                                <Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-
-                    <LinearGradientBrush x:Key="Background1" StartPoint="0,0" EndPoint="0,1">
-                        <LinearGradientBrush.GradientStops>
-                            <GradientStop Color="#F3F3F3" Offset="0" />
-                            <GradientStop Color="#EBEBEB" Offset="0.5" />
-                            <GradientStop Color="#DDDDDD" Offset="0.5" />
-                            <GradientStop Color="#CDCDCD" Offset="1" />
-                        </LinearGradientBrush.GradientStops>
-                    </LinearGradientBrush>
-                    <SolidColorBrush x:Key="Background2" Color="#FF707070" />
-                    <LinearGradientBrush x:Key="Background3" StartPoint="0,0" EndPoint="0,1">
-                        <LinearGradientBrush.GradientStops>
-                            <GradientStop Color="#C4C4C4" Offset="0" />
-                            <GradientStop Color="#C4C4C4" Offset="0.75" />
-                            <GradientStop Color="#939393" Offset="1" />
-                        </LinearGradientBrush.GradientStops>
-                    </LinearGradientBrush>
-
-
                     <ControlTemplate TargetType="MenuItem" x:Key="TopLevelHeaderTemplate">
                         <Grid SnapsToDevicePixels="true">
                             <Rectangle Name="OuterBorder" RadiusX="2" RadiusY="2" />
@@ -203,14 +175,17 @@
                                 <!--<Path Name="GlyphPanel" Margin="7,0,0,0" Visibility="Collapsed" VerticalAlignment="Center" Fill="{TemplateBinding Foreground}" FlowDirection="LeftToRight" Data="{StaticResource [0] Ñ}" />-->
                                 <ContentPresenter ContentSource="Header" Margin="{TemplateBinding Padding}" RecognizesAccessKey="true" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
                             </DockPanel>
-                            <Popup Name="PART_Popup" HorizontalOffset="1" VerticalOffset="-1" AllowsTransparency="true" Placement="Bottom" Focusable="false" PopupAnimation="{DynamicResource {x:Static SystemParameters.MenuPopupAnimation}}" IsOpen="{Binding Path=IsSubmenuOpen, RelativeSource={RelativeSource TemplatedParent}}">
+                            <Popup Name="PART_Popup" HorizontalOffset="1" VerticalOffset="-1" AllowsTransparency="true" Placement="Bottom" 
+                                   Focusable="false" PopupAnimation="{DynamicResource {x:Static SystemParameters.MenuPopupAnimation}}" 
+                                   IsOpen="{Binding Path=IsSubmenuOpen, RelativeSource={RelativeSource TemplatedParent}}"
+                                   MaxHeight="300">
                                 <theme:SystemDropShadowChrome Name="Shdw" Color="Transparent" FlowDirection="LeftToRight">
                                     <Border Name="SubMenuBorder" Background="White" BorderBrush="{StaticResource NormalBorderBrush}" BorderThickness="1">
-                                        <!--<ScrollViewer Name="SubMenuScrollViewer" Margin="1,0">-->
+                                        <ScrollViewer Name="SubMenuScrollViewer" Margin="1,0">
                                             <Grid RenderOptions.ClearTypeHint="Enabled">
                                                 <ItemsPresenter Name="ItemsPresenter" Margin="2" KeyboardNavigation.TabNavigation="Cycle" KeyboardNavigation.DirectionalNavigation="Cycle" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Grid.IsSharedSizeScope="true" />
                                             </Grid>
-                                        <!--</ScrollViewer>-->
+                                        </ScrollViewer>
                                     </Border>
                                 </theme:SystemDropShadowChrome>
                             </Popup>
@@ -282,15 +257,15 @@
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto" SharedSizeGroup="Icon"/>
                                     <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" SharedSizeGroup="Shortcut"/>
-                                    <ColumnDefinition Width="13"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="10"/>
                                 </Grid.ColumnDefinitions>
                                 <ContentPresenter Name="Icon" Margin="6,0,6,0" VerticalAlignment="Center" ContentSource="Icon"/>
                                 <Border Name="Check" Width="13" Height="13" Visibility="Collapsed" Margin="6,0,6,0" Background="{StaticResource NormalBrush}" BorderThickness="1" BorderBrush="{StaticResource NormalBorderBrush}">
-                                    <Path Name="CheckMark" Width="7" Height="7" Visibility="Hidden" SnapsToDevicePixels="False" Stroke="{StaticResource GlyphBrush}" StrokeThickness="2" Data="M 0 0 L 7 7 M 0 7 L 7 0" />
+                                    <Path Name="CheckMark" Width="7" Height="7" Visibility="Hidden" SnapsToDevicePixels="False" Stroke="{StaticResource MenuGlyphBrush}" StrokeThickness="2" Data="M 0 0 L 7 7 M 0 7 L 7 0" />
                                 </Border>
-                                <ContentPresenter Name="HeaderHost" Grid.Column="1" ContentSource="Header" RecognizesAccessKey="True" VerticalAlignment="Center"/>
-                                <TextBlock x:Name="InputGestureText" Grid.Column="2" Text="{TemplateBinding InputGestureText}" Margin="5,2,0,2" VerticalAlignment="Center" />
+                                <ContentPresenter Name="HeaderHost" Grid.Column="1" ContentSource="Header" RecognizesAccessKey="True" VerticalAlignment="Center" Margin="0,2,0,2"/>
+                                <TextBlock x:Name="InputGestureText" Grid.Column="2" Text="{TemplateBinding InputGestureText}" Margin="15,2,0,2" VerticalAlignment="Center" />
                             </Grid>
                         </Border>
                         <ControlTemplate.Triggers>
@@ -305,7 +280,7 @@
                                 <Setter TargetName="Icon" Property="Visibility" Value="Hidden"/>
                             </Trigger>
                             <Trigger Property="IsHighlighted" Value="true">
-                                <Setter TargetName="Border" Property="Background" Value="{StaticResource SelectedBackgroundBrush}"/>
+                                <Setter TargetName="Border" Property="Background" Value="{StaticResource MenuHighlight2}"/>
                             </Trigger>
                             <Trigger Property="IsEnabled" Value="false">
                                 <Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}"/>
@@ -313,7 +288,7 @@
                             <Trigger Property="Command" Value="{x:Null}">
                                 <Setter Property="IsEnabled" Value="False"/>
                             </Trigger>
-                            <Trigger Property="InputGestureText" Value="{x:Null}">
+                            <Trigger Property="InputGestureText" Value="">
                                 <Setter TargetName="InputGestureText" Property="Visibility" Value="Collapsed"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
@@ -333,7 +308,7 @@
                                 <ContentPresenter Name="Icon" Margin="6,0,6,0" VerticalAlignment="Center" ContentSource="Icon"/>
                                 <ContentPresenter Name="HeaderHost" Grid.Column="1" ContentSource="Header" RecognizesAccessKey="True"/>
                                 <TextBlock x:Name="InputGestureText" Grid.Column="2" Text="{TemplateBinding InputGestureText}" Margin="5,2,2,2" DockPanel.Dock="Right"/>
-                                <Path Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Data="M 0 0 L 0 7 L 4 3.5 Z" Fill="{StaticResource GlyphBrush}" />
+                                <Path Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Data="M 0 0 L 0 7 L 4 3.5 Z" Fill="{StaticResource MenuGlyphBrush}" />
                                 <Popup Name="Popup" Placement="Right" HorizontalOffset="-4" IsOpen="{TemplateBinding IsSubmenuOpen}" AllowsTransparency="True" Focusable="False" PopupAnimation="Fade">
                                     <Border Name="SubmenuBorder" SnapsToDevicePixels="True" Background="{StaticResource WindowBackgroundBrush}" BorderBrush="{StaticResource NormalBorderBrush}" BorderThickness="1">
                                         <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Cycle" />
@@ -346,7 +321,7 @@
                                 <Setter TargetName="Icon" Property="Visibility" Value="Collapsed"/>
                             </Trigger>
                             <Trigger Property="IsHighlighted" Value="true">
-                                <Setter TargetName="Border" Property="Background" Value="{StaticResource SelectedBackgroundBrush}"/>
+                                <Setter TargetName="Border" Property="Background" Value="{StaticResource MenuHighlight2}"/>
                             </Trigger>
                             <Trigger SourceName="Popup" Property="Popup.AllowsTransparency" Value="True">
                                 <Setter TargetName="SubmenuBorder" Property="CornerRadius" Value="4"/>
